--- a/css/app.css
+++ b/css/app.css
@@ -41,11 +41,25 @@
    }
 
    button, .ui-btn {
-      /*font-family: 'novecento_widedemibold',helvetica,sans-serif;*/
+      font-family: 'novecento_widedemibold',helvetica,sans-serif;
+      color:#324e55;
    }
+   .ui-btn-icon-left {
+padding-left: 1em;
+}
+
+.btn-cta{
+background:#668f7c!important;
+border:none!important;
+color:#fff!important;
+border-radius: none!importantl
+}
    .logo {
       font-size: 28px;
       padding:22px 0 35px 0;
+color:#324e55;
+text-shadow: 0 1px 0 #E0EED6;
+
    }
    .logothin{
       font-family: 'novecento_widelight',helvetica,sans-serif;
@@ -56,6 +70,32 @@
       
    }
 
+   #hardness, #countdown {
+      display: none;
+   }
+
+   .ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head+body .ui-btn.ui-btn-a, .ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head+body .ui-btn.ui-btn-a:visited {
+      color: #333;
+      background-color: rgba(255, 255, 2555, 0.3);
+      border: 1px dashed #648978;
+      text-align: center;
+   }
+
+   .ui-btn.ui-checkbox-off:after, .ui-btn.ui-checkbox-on:after, .ui-btn.ui-radio-off:after, .ui-btn.ui-radio-on:after {
+      display: none;
+   }
+
+   .ui-content {
+      text-align: center;
+   }
+
+   .ui-controlgroup-vertical {
+ font-family: 'novecento_widelight',helvetica,sans-serif!important;
+   }
+
+   input[type=radio] {
+      display: none;
+   }
 
    .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper {
       /* fallback */
@@ -77,6 +117,79 @@
       /* IE 10 */
       background: -ms-radial-gradient(circle, #f6eda3, #96c7b5);
 
+   }
 
 
+   .answerBtn{
+      width: 50px;
+      text-align: center;
+      font-family: 'novecento_widelight',helvetica,sans-serif;
+      font-size:20px;
+      color:#324e55!important;
+   }
+   #resultsList {
+      font-size: 25px;
+      padding: 155px 0 15px 0;
+   }
+   #aDiv {
+      text-align: center;
+      padding:15px 0;
+   }
+   #QuestionHolder {
+      position: absolute;
+      bottom: 0;
+      text-align: center;
+      width: 100%;
+      background: #f3f1e0;
+   }
+   #qDiv {
+      background: #373d3f;
+      padding: 14px 0;
+      color: #fff;
+      font-weight: bold;
+      font-size: 16px;
+   }
+   #wrong {
+      background: red;
+      padding: 14px 0;
+      color: #fff;
+      font-weight: bold;
+      font-size: 16px;
+      text-align: center;
+      position:absolute;
+      bottom:100px;
+      right:0px;
+      z-index: 10;
+      width:100%;
+   }
+   #thesun {
+      position:absolute;
+      top:-50px;
+      left:90px;
+   }
+   #mama {
+      position:absolute;
+      bottom:150px;
+      left:-50px;
+      z-index: 999;
+   }
+   #baby {
+      position:absolute;
+      bottom:150px;
+      right:-50px;
+      z-index: 1099;
+   }
+   #hills {
+      position:absolute;
+      bottom:150px;
+      right:0px;
+      z-index: 10;
+   }
+   #landing, #results {
+      text-align: center;
+      padding: 15px;
+      margin: 0;
+   }
+   #landing > p {
+      padding:35px 0 20px 0;
    }
