--- a/css/app.css
+++ b/css/app.css
@@ -43,153 +43,203 @@
    button, .ui-btn {
       font-family: 'novecento_widedemibold',helvetica,sans-serif;
       color:#324e55;
+      text-shadow: none!important;
    }
+
+   button {
+     color: #333;
+background-color: rgba(255, 255, 2555, 0.3);
+border: 1px dashed #648978;
+}
+
+   label {
+font-family: 'novecento_widelight'!important;
+}
+
+.ui-field-contain {
+border-bottom: none;
+}
+
+.ui-radio-on {
+  background: rgba(92,145,158,.7)!important;
+  color:#fff!important;
+  font-family: 'novecento_widedemibold',helvetica,sans-serif!important;
+}
+
+.ui-controlgroup-vertical {
+  font-family: 'novecento_widelight',helvetica,sans-serif!important;
+  font-size:.6em;
+}
    .ui-btn-icon-left {
-padding-left: 1em;
+      padding-left: 1em;
+   }
+
+   p {
+    color:#324e55; 
+    text-shadow:none;
+    font-size: .9em;
+ }
+
+
+
+ .btn-cta{
+   background:#668f7c!important;
+   border:none!important;
+   color:#fff!important;
+   border-radius: none!importantl
+}
+.logo {
+   font-size: 28px;
+   padding:22px 0 35px 0;
+   color:#324e55;
+   text-shadow: 0 1px 0 #E0EED6;
+
+}
+.logothin{
+   font-family: 'novecento_widelight',helvetica,sans-serif;
+
+}
+.logothick{
+   font-family: 'novecento_widedemibold',helvetica,sans-serif;
+
 }
 
-.btn-cta{
-background:#668f7c!important;
-border:none!important;
-color:#fff!important;
-border-radius: none!importantl
+#hardness, #countdown {
+   display: none;
 }
-   .logo {
-      font-size: 28px;
-      padding:22px 0 35px 0;
-color:#324e55;
-text-shadow: 0 1px 0 #E0EED6;
 
-   }
-   .logothin{
-      font-family: 'novecento_widelight',helvetica,sans-serif;
+.ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head+body .ui-btn.ui-btn-a, .ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head+body .ui-btn.ui-btn-a:visited {
+   color: #333;
+   background-color: rgba(255, 255, 2555, 0.3);
+   border: 1px dashed #648978;
+   text-align: center;
+}
 
-   }
-   .logothick{
-      font-family: 'novecento_widedemibold',helvetica,sans-serif;
-      
-   }
+.ui-btn.ui-checkbox-off:after, .ui-btn.ui-checkbox-on:after, .ui-btn.ui-radio-off:after, .ui-btn.ui-radio-on:after {
+   display: none;
+}
 
-   #hardness, #countdown {
-      display: none;
-   }
+.ui-content {
+   text-align: center;
+}
 
-   .ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head+body .ui-btn.ui-btn-a, .ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head+body .ui-btn.ui-btn-a:visited {
-      color: #333;
-      background-color: rgba(255, 255, 2555, 0.3);
-      border: 1px dashed #648978;
-      text-align: center;
-   }
+input[type=radio] {
+   display: none;
+}
 
-   .ui-btn.ui-checkbox-off:after, .ui-btn.ui-checkbox-on:after, .ui-btn.ui-radio-off:after, .ui-btn.ui-radio-on:after {
-      display: none;
-   }
+.ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper {
+   /* fallback */
+   background-color: #96c7b5;
+   /*background-image: url(images/radial_bg.png);*/
+   background-position: center center;
+   background-repeat: no-repeat;
 
-   .ui-content {
-      text-align: center;
-   }
+   /* Safari 4-5, Chrome 1-9 */
+   /* Can't specify a percentage size? Laaaaaame. */
+   background: -webkit-gradient(radial, center center, 0, center center, 460, from(#f6eda3), to(#96c7b5));
 
-   .ui-controlgroup-vertical {
- font-family: 'novecento_widelight',helvetica,sans-serif!important;
-   }
+   /* Safari 5.1+, Chrome 10+ */
+   background: -webkit-radial-gradient(circle, #f6eda3, #96c7b5);
 
-   input[type=radio] {
-      display: none;
-   }
+   /* Firefox 3.6+ */
+   background: -moz-radial-gradient(circle, #f6eda3, #96c7b5);
 
-   .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper {
-      /* fallback */
-      background-color: #96c7b5;
-      /*background-image: url(images/radial_bg.png);*/
-      background-position: center center;
-      background-repeat: no-repeat;
+   /* IE 10 */
+   background: -ms-radial-gradient(circle, #f6eda3, #96c7b5);
 
-      /* Safari 4-5, Chrome 1-9 */
-      /* Can't specify a percentage size? Laaaaaame. */
-      background: -webkit-gradient(radial, center center, 0, center center, 460, from(#f6eda3), to(#96c7b5));
-
-      /* Safari 5.1+, Chrome 10+ */
-      background: -webkit-radial-gradient(circle, #f6eda3, #96c7b5);
-
-      /* Firefox 3.6+ */
-      background: -moz-radial-gradient(circle, #f6eda3, #96c7b5);
-
-      /* IE 10 */
-      background: -ms-radial-gradient(circle, #f6eda3, #96c7b5);
-
-   }
+}
 
 
-   .answerBtn{
-      width: 50px;
-      text-align: center;
-      font-family: 'novecento_widelight',helvetica,sans-serif;
-      font-size:20px;
-      color:#324e55!important;
-   }
-   #resultsList {
-      font-size: 25px;
-      padding: 155px 0 15px 0;
-   }
-   #aDiv {
-      text-align: center;
-      padding:15px 0;
-   }
-   #QuestionHolder {
-      position: absolute;
-      bottom: 0;
-      text-align: center;
-      width: 100%;
-      background: #f3f1e0;
-   }
-   #qDiv {
-      background: #373d3f;
-      padding: 14px 0;
-      color: #fff;
-      font-weight: bold;
-      font-size: 16px;
-   }
-   #wrong {
-      background: red;
-      padding: 14px 0;
-      color: #fff;
-      font-weight: bold;
-      font-size: 16px;
-      text-align: center;
-      position:absolute;
-      bottom:100px;
-      right:0px;
-      z-index: 10;
-      width:100%;
-   }
-   #thesun {
-      position:absolute;
-      top:-50px;
-      left:90px;
-   }
-   #mama {
-      position:absolute;
-      bottom:150px;
-      left:-50px;
-      z-index: 999;
-   }
-   #baby {
-      position:absolute;
-      bottom:150px;
-      right:-50px;
-      z-index: 1099;
-   }
-   #hills {
-      position:absolute;
-      bottom:150px;
-      right:0px;
-      z-index: 10;
-   }
-   #landing, #results {
-      text-align: center;
-      padding: 15px;
-      margin: 0;
-   }
-   #landing > p {
-      padding:35px 0 20px 0;
-   }
+.answerBtn {
+width: 50px;
+height: 45px;
+text-align: center;
+font-family: 'novecento_widelight',helvetica,sans-serif;
+font-size: 20px;
+color: #324e55!important;
+margin: 10px;
+border-radius: 6px;
+}
+#resultsList {
+   font-size: 25px;
+   padding: 155px 0 15px 0;
+}
+#aDiv {
+   text-align: center;
+   padding:15px 0;
+}
+#QuestionHolder {
+   position: absolute;
+   bottom: 0;
+   text-align: center;
+   width: 100%;
+   background: #f3f1e0;
+   margin:0;
+   left:0;
+
+}
+#qDiv {
+background: #373d3f;
+/*padding: 15px 0;*/
+color: #fff;
+font-weight: bold;
+font-size: 30px;
+font-family: 'novecento_widedemibold',helvetica,sans-serif!important;
+text-shadow: none!important;
+height:65px;
+line-height: 2.07em;
+z-index: 1050;
+}
+#wrong {
+   background: red;
+  /* padding: 15px 0;*/
+   color: #fff;
+   font-weight: bold;
+  font-size: 20px;
+font-family: 'novecento_widedemibold',helvetica,sans-serif!important;
+text-shadow: none!important;
+   text-align: center;
+   position:absolute;
+   bottom:95px;
+   right:0px;
+   z-index: 100;
+   width:100%;
+   height:65px;
+   line-height: 3.1em;
+}
+#thesun {
+   position:absolute;
+   top:-50px;
+   left:50%;
+   margin-left:-72px;
+}
+#mama {
+   position:absolute;
+   bottom:137px;
+   left:-50px;
+   z-index: 20;
+}
+#baby {
+   position:absolute;
+   bottom:137px;
+   right:-50px;
+   z-index: 21;
+}
+#hills {
+   position:absolute;
+   bottom:160px;
+   left:50%;
+
+margin-left:-512px;
+
+   z-index: 5;
+   width:1024px;
+}
+#landing, #results {
+   text-align: center;
+   padding: 15px;
+   margin: 0;
+}
+#landing > p {
+   padding:35px 0 20px 0;
+}
