--- a/css/app.css
+++ b/css/app.css
@@ -92,7 +92,8 @@ border-bottom: none;
    font-size: 28px;
    padding:22px 0 35px 0;
    color:#324e55;
-   text-shadow: 0 1px 0 #E0EED6;
+   /*text-shadow: 0 1px 0 #E0EED6;*/
+   text-shadow:none;
 
 }
 .logothin{
@@ -122,6 +123,8 @@ border-bottom: none;
 .ui-content {
    text-align: center;
 }
+
+.ui-page { -webkit-backface-visibility: hidden; }
 
 input[type=radio] {
    display: none;
@@ -159,6 +162,7 @@ font-size: 20px;
 color: #324e55!important;
 margin: 10px;
 border-radius: 6px;
+padding:0;
 }
 #resultsList {
    font-size: 25px;
@@ -176,7 +180,7 @@ border-radius: 6px;
    background: #f3f1e0;
    margin:0;
    left:0;
-
+z-index: 300;
 }
 #qDiv {
 background: #373d3f;
@@ -188,7 +192,7 @@ font-family: 'novecento_widedemibold',helvetica,sans-serif!important;
 text-shadow: none!important;
 height:65px;
 line-height: 2.07em;
-z-index: 1050;
+z-index: 350;
 }
 #wrong {
    background: red;
@@ -202,7 +206,24 @@ text-shadow: none!important;
    position:absolute;
    bottom:95px;
    right:0px;
-   z-index: 100;
+   z-index: 1000;
+   width:100%;
+   height:65px;
+   line-height: 3.1em;
+}
+#right {
+   background: green;
+  /* padding: 15px 0;*/
+   color: #fff;
+   font-weight: bold;
+  font-size: 20px;
+font-family: 'novecento_widedemibold',helvetica,sans-serif!important;
+text-shadow: none!important;
+   text-align: center;
+   position:absolute;
+   bottom:95px;
+   right:0px;
+   z-index: 1001;
    width:100%;
    height:65px;
    line-height: 3.1em;
@@ -212,20 +233,33 @@ text-shadow: none!important;
    top:-50px;
    left:50%;
    margin-left:-72px;
+   z-index: 12;
 }
+
 #mama {
    position:absolute;
-   bottom:137px;
-   left:-50px;
+   bottom:160px;
+   left:-200px;
    z-index: 20;
 }
 #baby {
    position:absolute;
-   bottom:137px;
-   right:-50px;
+   bottom:160px;
+   right:20px;
    z-index: 21;
 }
-#hills {
+
+#night{
+   height:100%;
+   width:100%;
+   background:#003872;
+   opacity: 0;
+z-index: 11;
+position:absolute;
+top:0;
+left:0;
+}
+/*#hills {
    position:absolute;
    bottom:160px;
    left:50%;
@@ -234,6 +268,13 @@ margin-left:-512px;
 
    z-index: 5;
    width:1024px;
+}*/
+#hills {
+   position:absolute;
+   bottom:160px;
+   right:0;
+   z-index: 19;
+   /*width:1024px;*/
 }
 #landing, #results {
    text-align: center;
@@ -243,3 +284,4 @@ margin-left:-512px;
 #landing > p {
    padding:35px 0 20px 0;
 }
+
