--- a/css/app.css
+++ b/css/app.css
@@ -86,7 +86,8 @@ border-bottom: none;
    background:#668f7c!important;
    border:none!important;
    color:#fff!important;
-   border-radius: none!importantl
+   border-radius: none!important;
+   padding:20px;
 }
 .logo {
    font-size: 28px;
@@ -195,12 +196,12 @@ line-height: 2.07em;
 z-index: 350;
 }
 #wrong {
-   background: red;
+   background: #f1375a;
   /* padding: 15px 0;*/
    color: #fff;
    font-weight: bold;
   font-size: 20px;
-font-family: 'novecento_widedemibold',helvetica,sans-serif!important;
+font-family: 'novecento_widelight',helvetica,sans-serif!important;
 text-shadow: none!important;
    text-align: center;
    position:absolute;
@@ -212,12 +213,12 @@ text-shadow: none!important;
    line-height: 3.1em;
 }
 #right {
-   background: green;
+   background: #8db46e;
   /* padding: 15px 0;*/
    color: #fff;
    font-weight: bold;
   font-size: 20px;
-font-family: 'novecento_widedemibold',helvetica,sans-serif!important;
+font-family: 'novecento_widelight',helvetica,sans-serif!important;
 text-shadow: none!important;
    text-align: center;
    position:absolute;
